# ChangeLog for sys-apps/portage
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*portage-2.2.00.10347 (16 May 2008)

  16 May 2008; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.9894.ebuild, +portage-2.2.00.10347.ebuild:
  New snapshot, readded rsync dependency, since we're about to switch to rsync
  for normal installations

*portage-2.2.00.10249 (08 May 2008)

  08 May 2008; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.9962.ebuild, +portage-2.2.00.10249.ebuild:
  New snapshot should solve downgrade problems (bug #220689)

*portage-2.2.00.10181 (04 May 2008)

  04 May 2008; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.9831.ebuild, +portage-2.2.00.10181.ebuild:
  New version that includes fixes for Interix' usernames with spaces in them.
  Preserve-libs may be wonky (broken).

*portage-2.2.00.9962 (24 Apr 2008)

  24 Apr 2008; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.9583.ebuild, +portage-2.2.00.9962.ebuild:
  New snapshot, should contain zmedico's new blocker resultion voodoo, we'll see!

  19 Apr 2008; Fabian Groffen <grobian@gentoo.org>
  portage-2.2.00.9894.ebuild:
  Don't do repo check if we don't have svn availble, saves us from an ugly
  error message during bootstrap.

*portage-2.2.00.9894 (14 Apr 2008)

  14 Apr 2008; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.9869.ebuild, +portage-2.2.00.9894.ebuild:
  Replace previous snapshot which contains a backtrace on unmerging packages
  which have preserved-libs

*portage-2.2.00.9869 (13 Apr 2008)

  13 Apr 2008; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.9500.ebuild, +portage-2.2.00.9869.ebuild:
  New snapshot, with a wannabe workaround for bug #217481

*portage-2.2.00.9831 (11 Apr 2008)

  11 Apr 2008; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.9812.ebuild, +portage-2.2.00.9831.ebuild:
  New snapshot, fix for backtrace on preserve-libs; getlibpaths

*portage-2.2.00.9812 (10 Apr 2008)
