@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.10385 (21 May 2008)
+
+  21 May 2008; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.10181.ebuild, +portage-2.2.00.10385.ebuild:
+  New snapshot, new chances for b0rkage ;)
+
 *portage-2.2.00.10347 (16 May 2008)
 
   16 May 2008; Fabian Groffen <grobian@gentoo.org>
